unpackaged/main/default/objects/ConsumptionSchedule/fields/blng__BillingRule__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Référence à la règle de facturation attribuée</inlineHelpText>
    <label>Billing Rule</label>
    <referenceTo>blng__BillingRule__c</referenceTo>
    <relationshipLabel>Billing Rule</relationshipLabel>
    <relationshipName>ConsumptionSchedulesBillingRule</relationshipName>
    <type>Lookup</type>
</CustomField>