unpackaged/main/default/objects/ConsumptionSchedule/fields/blng__RevenueRecognitionRule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueRecognitionRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Référence à la Règle de comptabilisation du revenu attribuée</inlineHelpText>
    <label>Revenue Recognition Rule</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>Revenue Recognition Rule</relationshipLabel>
    <relationshipName>CSsRevenueRecognitionRule</relationshipName>
    <type>Lookup</type>
</CustomField>